--- a/A12.qmd
+++ b/A12.qmd
@@ -52,150 +52,135 @@ In this course the following titles are recommended for further reading and refe
 
 ![Doing Bayesian Data Analysis](images/book-DBA.jpg){#fig-DBA .column-margin width="40mm"}
 
-- [@kruschke2011doing] [Doing Bayesian Data Analysis](https://sites.google.com/site/doingbayesiandataanalysis/) this is the favorite on Bayesian statistics. It is a great book for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
-- This text is recommended for further reading in the course 2
+
+[@kruschke2011doing] [Doing Bayesian Data Analysis](https://sites.google.com/site/doingbayesiandataanalysis/) this is the favorite on Bayesian statistics. It is a great book for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. This text is recommended for further reading in the course 2
 
 
 ![Statistical Rethinking](images/book-SR.jpg){#fig-SR .column-margin width="40mm"}
 
-- [@McElreath2020Rethinking] [Statistical Rethinking: A Bayesian Course with Examples in R and Stan](https://xcelab.net/rm/) by Richard McElreath is, the runner up in terms of a popular book on Bayesian Statistics. This book is a great resource for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. McElreath is a gifted and entertaining explainer but he is not a full-fledged statistician and I find that in most cases the examples in this book are rather weak and challenging to adapt to real life settings.
-- This text is recommended for further reading in the course 2
+
+[@McElreath2020Rethinking] [Statistical Rethinking: A Bayesian Course with Examples in R and Stan](https://xcelab.net/rm/) by Richard McElreath is, the runner up in terms of a popular book on Bayesian Statistics. 
+This book is a great resource for learning Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. 
+The book is suitable for graduate students and researchers in statistics, computer science, and related fields. 
+McElreath is a gifted and entertaining explainer but he is not a full-fledged statistician.
+I find that in most cases the examples in this book are rather weak and challenging to adapt to real life settings.
+On the other hand his use of metaphors and his ability to pass on his intuition is unparalleled and has helped to shape my own thinking about statistics as is evidenced by the many references to his work in these notes.
+This text is recommended for further reading in the course 2
 
 ![Bayesian Data Analysis](images/book-BDA.jpg){#fig-BDA .column-margin width="40mm"}
 
-- [@gelman2013bayesian] [Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/) by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. This book is considered the classic Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book first and only then moving to this book. 
-- This text is is recommended for further reading in the course 2 but with the causion that a solid background in calculus-based probability is useful, as many details are left to the reader.
-
-- This text is recommended for further reading in the course 2
+- [@gelman2013bayesian] [Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/) by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. 
+This book is considered the classic Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. 
+The book is suitable for graduate students and researchers in statistics, computer science, and related fields. 
+This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book first and only then moving to this book. 
+This text is recommended for further reading in the course 2 but with a cautionary caveat that a solid background in calculus-based probability will be useful, as many details are left to the reader. I took an undergraduate course in probability and statistics that was based on measure theory but I'm not sure this was the kind of background these authors have in mind. 
 
 ![The BUGS book](images/book-BUGS.png){#fig-BUGS .column-margin width="40mm"}
 
-- [@lunn2012bugs] [The BUGS book: A Practical Introduction to Bayesian Analysis](https://www.routledge.com/The-BUGS-Book-A-Practical-Introduction-to-Bayesian-Analysis/Lunn-Jackson-Best-Thomas-Spiegelhalter/p/book/9781584888499?srsltid=AfmBOooQseXfF1NIhG8GlqCfzQdUHQLR7ytM3OuyPFsiwZUm11Hi1A_y) is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. IT focuses on simulation using BUGS.
-- This text is recommended for further reading in the course 2
+[@lunn2012bugs] [The BUGS book: A Practical Introduction to Bayesian Analysis](https://www.routledge.com/The-BUGS-Book-A-Practical-Introduction-to-Bayesian-Analysis/Lunn-Jackson-Best-Thomas-Spiegelhalter/p/book/9781584888499?srsltid=AfmBOooQseXfF1NIhG8GlqCfzQdUHQLR7ytM3OuyPFsiwZUm11Hi1A_y) is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian modeling, computation, and inference. 
+IT focuses on simulation using BUGS.
+This text is recommended for further reading in the course 2
 
-- [@carlin2008bayesian] Bayesian Methods for Data Analysis
+Some addition books that were mentioned in the course bibliography:
 
-- [@agresti2012categorical] This is a graduate level book on categorical data which often poses extra challenges for Bayesian statistics. Section 17.5 covers Bayesian methods for Categorical Data.
+[@carlin2008bayesian] Bayesian Methods for Data Analysis
 
-- [@spiegelhalter2002MeasuresOfModelComplexity] "Measures of Model Complexity and Fit" by David Spiegelhalter, Andrew Thomas, Nicky Best, and W. Brian Gilks. This paper considers the problem of model selection in Bayesian Hierarchical Models and proposes a new measure of model complexity and fit, the Deviance Information Criterion (DIC). 
+[@agresti2012categorical] This is a graduate level book on categorical data which often poses extra challenges for Bayesian statistics. Section 17.5 covers Bayesian methods for Categorical Data.
 
-- [@banerjee2026hierarchical] "[Hierarchical Modeling and Analysis for Spatial Data](https://www.routledge.com/Hierarchical-Modeling-and-Analysis-for-Spatial-Data/Banerjee-Carlin-Gelfand/p/book/9781439819173)" by Sudipto Banerjee, Bradley P. Carlin, and Alan E. Gelfand. This book is a comprehensive introduction to hierarchical modeling and analysis for spatial data and covers a wide range of topics in spatial statistics, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. [data etc](https://www.counterpointstat.com/hierarchical-modeling-and-analysis-for-spatial-data.html/)
-- [@carlin2008bayesian] [Bayesian Methods for Data Analysis](https://www.routledge.com/Bayesian-Methods-for-Data-Analysis/Louis/p/book/9781584886976?srsltid=AfmBOop9-MGtcimSIt0z-dGXB8pHfh3flou_gCuLbwDV67C5UOFp1JHl)
-- [@gelman2006data] This is too is a classic book on data analysis using regression and multilevel/hierarchical models. I read this one may years ago and is fairly approachable and recommended - unless the next edition has come out?
+[@spiegelhalter2002MeasuresOfModelComplexity] "Measures of Model Complexity and Fit" by David Spiegelhalter, Andrew Thomas, Nicky Best, and W. Brian Gilks. 
+This paper considers the problem of model selection in Bayesian Hierarchical Models and proposes a new measure of model complexity and fit, the Deviance Information Criterion (DIC). 
+
+[@banerjee2026hierarchical] "[Hierarchical Modeling and Analysis for Spatial Data](https://www.routledge.com/Hierarchical-Modeling-and-Analysis-for-Spatial-Data/Banerjee-Carlin-Gelfand/p/book/9781439819173)" by Sudipto Banerjee, Bradley P. Carlin, and Alan E. Gelfand. 
+This book is a comprehensive introduction to hierarchical modeling and analysis for spatial data and covers a wide range of topics in spatial statistics, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. [data etc](https://www.counterpointstat.com/hierarchical-modeling-and-analysis-for-spatial-data.html/)
+
+
+[@carlin2008bayesian] [Bayesian Methods for Data Analysis](https://www.routledge.com/Bayesian-Methods-for-Data-Analysis/Louis/p/book/9781584886976?srsltid=AfmBOop9-MGtcimSIt0z-dGXB8pHfh3flou_gCuLbwDV67C5UOFp1JHl)
+
+[@gelman2006data] This is too is a classic book on data analysis using regression and multilevel/hierarchical models. 
+I read this one may years ago and is fairly approachable and recommended 
+Unless the next edition has come out?
 
 ## Mixture Models 
 
-- [@frühwirth2006finite] [Finite Mixture and Markov Switching Models]() by Sylvia Frühwirth-Schnatter. This book is a comprehensive introduction to finite mixture and Markov switching models and covers a wide range of topics in mixture modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
+There were no books recommended in this course but this was in the bibliography from the previous course.
+
+[@frühwirth2006finite] [Finite Mixture and Markov Switching Models](https://statmath.wu.ac.at/~fruehwirth/monographie/book_matlab_version_2.0.pdf) by Sylvia Frühwirth-Schnatter. 
+This book is a comprehensive introduction to finite mixture and Markov switching models and covers a wide range of topics in mixture modeling, computation, and inference. 
+The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
+
+I found a number of other books on mixtures and time premitting I will add theme here
+
+<!-- TODO add more books on mixtures-->
 
 ## Non parametric Bayesian Statistics
 
-- [@Hjort_Holmes_Müller_Walker_2010] "Bayesian Nonparametrics" by Peter M. Hjort, Chris Holmes, Maria E. Müller, and Stephen G. Walker. This book is a comprehensive introduction to Bayesian nonparametric methods and covers a wide range of topics in nonparametric modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
+[@Hjort_Holmes_Müller_Walker_2010] "Bayesian Nonparametrics" by Peter M. Hjort, Chris Holmes, Maria E. Müller, and Stephen G. Walker. 
+This book is a comprehensive introduction to Bayesian nonparametric methods and covers a wide range of topics in nonparametric modeling, computation, and inference. 
+The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
 
 ## Bayesian Time Series Bibliography
 
 We start with some books from the course, I collected here both the recommended books and some others that I found useful.
 
+![Bayesian Forecasting and Dynamic Models](images/book-BFADM.png){#fig-BFADM .column-margin width="40mm"}
+
+[@west2013bayesian] [Bayesian Forecasting and Dynamic Models](https://www2.stat.duke.edu/~mw/West&HarrisonBook/) by Mike West and Jeff Harrison. 
+This book is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian forecasting and dynamic models. 
+The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
+This is a much easier read than the following book and is a great introduction to Bayesian time series analysis.
+It soon became my goto reference for understanding the more challenging aspects of the course.
+It provides simple explanations with better motivations.
+
+I have some criticism. 
+The authors sometimes become very *meta* discussing their models at very abstract level that is more relevant to philosophy majors than statistics.
+For example a dynamic model is a defined as a set of models whose parameters may change at any index of time series. 
+That's a very poor definition - its like asking us to use a 1:1 map for navigation. 
+When I took a course on function approximation in RL we got a much neater exposition to parameterization of to very similar markov state space models.
+I found that the white noise model getting a very extensive treatment, perhaps, because it is easier to analyze.
+This is a random walk and the rudiments of which are easily taught in a single high-school lesson.
+They also digress into *statistical war stories* type anecdotes that rather than instil confidence that the authors know what they are talking about 
+they are effectively making a case that they failed to communicate effectively with their clients with disastrous effect. 
+Mathematically the book is very much self contained and this shows great integrity.
+I've seen some talks by Mike West in which he highlights research by his students and this are great if very challenging to follow.
+
+The authors also published a second book [Applied Bayesian Forecasting and Time Series Analysis]](https://www2.stat.duke.edu/~mw/bats.html)
+this one is based on the BATS software package which is no longer maintained. However it does contain a large number of datasets
+
 ![Time Series: Modeling, Computation, and Inference](images/book-TSMCI.jpg){#fig-TSMCI .column-margin width="40mm"}
 
-[@prado2023time] [Time Series: Modeling, Computation, and Inference](https://www.routledge.com/Time-Series-Modeling-Computation-and-Inference-Second-Edition/Prado-Ferreira-West/p/book/9781032040042?srsltid=AfmBOoodi-xrmkceGPPFHNhIQHiiLpaXEgd8fi2kdG7WNb-w1gYvWe4-) by course instructor Raquel Prado. This book, now in its second edition is a comprehensive introduction to time series analysis and covers a wide range of topics in time series modeling, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. 
+[@prado2023time] [Time Series: Modeling, Computation, and Inference](https://www.routledge.com/Time-Series-Modeling-Computation-and-Inference-Second-Edition/Prado-Ferreira-West/p/book/9781032040042?srsltid=AfmBOoodi-xrmkceGPPFHNhIQHiiLpaXEgd8fi2kdG7WNb-w1gYvWe4-) by course instructor Raquel Prado and Marco A. R. Ferreira, Mike West.
+This book, now in its second edition is a comprehensive introduction to time series analysis and covers a wide range of topics in time series modeling, computation, and inference. 
+The book is suitable for graduate students and researchers in statistics, computer science, and related fields. 
 
-While learning this course I found some of the material harder to follow than I expected. The books helped to clarify definitions and so on however the book is  rather comprehensive and mathematically advanced unlike some other books on statistics. 
+While learning this course I found some of the material harder to follow than I expected. 
+The book helped to clarify definitions and so on however the book is rather comprehensive and mathematically advanced unlike some other books on statistics. 
 
-The teacher frequently point out that many aspects of Times series and are beyond the scope of the course. Yet this book covers much more ground like unequally spaced time series and vector valued time series. 
+The teacher frequently point out that many aspects of Times series and are beyond the scope of the course. 
+Yet this book covers much more ground like unequally spaced time series and vector valued time series. 
 
-For example we look at EKG data which the authors have been working on for years. However we look at it in this course in terms of a univariate time series while in reality EKG is usually sampled at 12 sites simultaneously yielding a multi-variate time series.
+For example we look at EKG data which the authors have been working on for years. 
+However we look at it in this course in terms of a univariate time series while in reality EKG is usually sampled at 12 sites simultaneously yielding a multi-variate time series.
 
 Once this course is done I will probably want to dive deeper into the subject and try to devote more time to other models in the book.
 
-- Title:Time Series: Modeling, Computation, and Inference
-- Authors: Raquel Prado, Marco A. R. Ferreira, Mike West
-- ISBN:9781032040042, 1032040041
-- Page count:452
-- Published:September 2023
-- Format:Paperback
-- Publisher:CRC Press
 
-
-c.f. [@west2013bayesian]
-
-![Bayesian Forecasting and Dynamic Models](images/book-BFADM.png){#fig-BFADM .column-margin width="40mm"}
-
-[@west2013bayesian] **"Bayesian Forecasting and Dynamic Models"** by Mike West and Jeff Harrison. This book is a classic text on Bayesian statistics and covers a wide range of topics in Bayesian forecasting and dynamic models. The following is the description from the publisher:
-
-> The use of dynamic models in the forecasting of time series data has a long history, with the development of autoregressive integrated moving average (ARIMA) models and state space models. However, the use of Bayesian methods in the development of dynamic models is a relatively recent development. This book provides a comprehensive introduction to the use of Bayesian methods in the development of dynamic models for forecasting time series data. The book covers a wide range of topics, including the use of dynamic models in the analysis of time series data, the use of Bayesian methods in the development of dynamic models, and the use of dynamic models in the forecasting of time series data. 
-
-- Audience: The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
-
-- Title:Bayesian Forecasting and Dynamic Models
-- ISBN:9781475770971, 1475770979
-- Page count:682
-- Published:March 17, 2013
-- Format:Paperback
-- Publisher:Springer New York
-- Author:Mike West, Jeff Harrison
-<!--
-In this book we are concerned with Bayesian learning and forecast ing in dynamic environments. We describe the structure and theory of classes of dynamic models, and their uses in Bayesian forecasting. The principles, models and methods of Bayesian forecasting have been developed extensively during the last twenty years. This development has involved thorough investigation of mathematical and statistical aspects of forecasting models and related techniques. With this has come experience with application in a variety of areas in commercial and industrial, scientific and socio-economic fields. In deed much of the technical development has been driven by the needs of forecasting practitioners. As a result, there now exists a relatively complete statistical and mathematical framework, although much of this is either not properly documented or not easily accessible. Our primary goals in writing this book have been to present our view of this approach to modelling and forecasting, and to provide a reasonably complete text for advanced university students and research workers. The text is primarily intended for advanced undergraduate and postgraduate students in statistics and mathematics. In line with this objective we present thorough discussion of mathematical and statistical features of Bayesian analyses of dynamic models, with illustrations, examples and exercises in each Chapter.
--->
-
-
-
-### Practical Time Series Analysis 
 
 c.f. [@nielsen2019practical]
 
 ![Practical Times Series Analysis](images/book-PTSA.jpg){#fig-PTSA .column-margin width="40mm"}
 
 
-
-- [@nielsen2019practical] "Practical Time Series Analysis: Prediction with Statistics and Machine Learning" by Aileen Nielsen. Is a good resource for parctionars getting started with time series analysis. I also recommend any videos by Aileen Nielsen on the subject.
-
-> Practical Times Series Analysis by Aileen Nielsen is a good book for beginners. It is a practical guide to time series analysis and covers a wide range of topics in time series modeling, computation, and inference. The book is suitable for beginners in statistics, computer science, and related fields.
->
-> Time series data analysis is increasingly important due to the massive production of such data through the internet of things, the digitalization of healthcare, and the rise of smart cities. As continuous monitoring and data collection become more common, the need for competent time series analysis with both statistical and machine learning techniques will increase.
->
-> Covering innovations in time series data analysis and use cases from the real world, this practical guide will help you solve the most common data engineering and analysis challenges in time series, using both traditional statistical and modern machine learning techniques. Author Aileen Nielsen offers an accessible, well-rounded introduction to time series in both R and Python that will have data scientists, software engineers, and researchers up and running quickly.
->
-> You’ll get the guidance you need to confidently:
-
-- Find and wrangle time series data
-- Undertake exploratory time series data analysis
-- Store temporal data
-- Simulate time series data
-- Generate and select features for a time series
-- Measure error
-- Forecast and classify time series with machine or deep learning
-- Evaluate accuracy and performance
-
-- Title:Practical Time Series Analysis: Prediction with Statistics and Machine Learning
-- ISBN:1492041602, 9781492041603
-- Page count:504
-- Published:2019
-- Format:Paperback
-- Publisher:O'Reilly Media, Inc.
-
-
-![Machine Learning: A Bayesian and Optimization Perspective](images/theodoridis2015ML.png){#fig-MLABAOP .column-margin width="40mm"}
-
-[@theodoridis2015ML] [Machine Learning: A Bayesian and Optimization Perspective]() I came across this book while looking into the Durban-Levinson recursion and the Yule-Walker equations. So far I haven't had time to read it but it looks like a good book on machine learning. The following is the description from the publisher:
-
-> This tutorial text gives a unifying perspective on machine learning by covering both probabilistic and deterministic approaches -which are based on optimization techniques - together with the Bayesian inference approach, whose essence lies in the use of a hierarchy of probabilistic models. The book presents the major machine learning methods as they have been developed in different disciplines, such as statistics, statistical and adaptive signal processing and computer science. Focusing on the physical reasoning behind the mathematics, all the various methods and techniques are explained in depth, supported by examples and problems, giving an invaluable resource to the student and researcher for understanding and applying machine learning concepts.
-> The book builds carefully from the basic classical methods to the most recent trends, with chapters written to be as self-contained as possible, making the text suitable for different courses: pattern recognition, statistical/adaptive signal processing, statistical/Bayesian learning, as well as short courses on sparse modeling, deep learning, and probabilistic graphical models.
-
-- All major classical techniques: Mean/Least-Squares regression and filtering, Kalman filtering, stochastic approximation and online learning, Bayesian classification, decision trees, logistic regression and boosting methods.
-- The latest trends: Sparsity, convex analysis and optimization, online distributed algorithms, learning in RKH spaces, Bayesian inference, graphical and hidden Markov models, particle filtering, deep learning, dictionary learning and latent variables modeling.
-- Case studies - protein folding prediction, optical character recognition, text authorship identification, fMRI data analysis, change point detection, hyperspectral image unmixing, target localization, channel equalization and echo cancellation, show how the theory can be applied.
-- MATLAB code for all the main algorithms are available on an accompanying website, enabling the reader to experiment with the code.
-
-- Title:Machine Learning: A Bayesian and Optimization Perspective
-- ISBN:0128015225, 9780128015223
-- Page count:1062
-- Published:2015
-- Format:Hardcover
-- Publisher:Academic Press
-- Authors: Sergios Theodoridis
-
+[@nielsen2019practical] [Practical Time Series Analysis: Prediction with Statistics and Machine Learning]() by Aileen Nielsen. 
+Is a good resource for practitioners getting started with time series analysis. 
+I also recommend any videos by Aileen Nielsen on the subject. 
+In many ways this is a recommended introductory book on time series analysis.
+It covers, finding and wrangle time series data. EDA for TS. 
+How to store temporal data. Simulate time series data. 
+Generate and select features for a time series.
+Estimate errors, evaluate accuracy and performance. Forecast and classify time series with machine or deep learning.
 
 ![Statistical Analysis in Climate Research](images/von2002statistical.jpg){#fig-SAICR .column-margin width="40mm" }
+
 
 
 [@von2002statistical] [Statistical Analysis in Climate Research]() I came across this book while looking into the Durban-Levinson recursion and the Yule-Walker equations. So far I haven’t had time to read it but it looks promising. Here is the description from the publisher:
@@ -205,15 +190,6 @@ c.f. [@nielsen2019practical]
 > Hans von Storch is Director of the Institute of Hydrophysics of the GKSS Research Centre in Geesthacht, Germany and a Professor at the Meteorological Institute of the University of Hamburg.
 
 > Francis W. Zwiers is Chief of the Canadian Centre for Climate Modelling and Analysis, Atmospheric Environment Service, Victoria, Canada, and an Adjunct Professor at the Department of Mathematics and Statistics of the University of Victoria.
-
-- Title:Statistical Analysis in Climate Research
-- ISBN:1139425099, 9781139425094
-- Page count:484
-- Published:2002
-- Format:Paperback
-- Publisher:Cambridge University Press
-- Authors: Hans von Storch, Francis W. Zwiers
-
 
 ![Bayesian Modeling and Computation in Python](images/book-BMCP.jpg){#fig-BMCP .column-margin width="40mm" }
 
@@ -253,19 +229,7 @@ Andrew Metcalfe is an associate professor in the School of Mathematical Sciences
 
 In many branches of science relevant observations are taken sequentially over time. Bayesian Analysis of Time Series discusses how to use models that explain the probabilistic characteristics of these time series and then utilizes the Bayesian approach to make inferences about their parameters. This is done by taking the prior information and via Bayes theorem implementing Bayesian inferences of estimation, testing hypotheses, and prediction. The methods are demonstrated using both R and WinBUGS. The R package is primarily used to generate observations from a given time series model, while the WinBUGS packages allows one to perform a posterior analysis that provides a way to determine the characteristic of the posterior distribution of the unknown parameters.
 
-The book covers pretty much the material in the course. It uses R and WinBUGS to demonstrate the models and methods. 
-Models considered include:
-
-- white noise
-- Wiener process (random walk)
-- AR(p)
-- ARMA(p,q)
-- ARIMA
-- Regression
-- Regression with MA and Seasonal effects
-- DLM
-- TAR
-
+The book covers pretty much the material in the course. It uses R and WinBUGS to demonstrate the models and methods.  Models considered include: white noise, Wiener process (random walk), AR(p),ARMA(p,q), ARIMA, Regression, Regression with MA and Seasonal effects, DLM , TAR
 
 ![Bayesian Inference for Stochastic Processes by Lyle D. Broemeling](images/book-BIFSP.jpg){#fig-BIFSP .column-margin width="40mm" style="vertical-align: top;"  }
 
@@ -303,11 +267,16 @@ a newer title from the authors is:
 
 There are also a number of books on NDLM that I've come across:
 
-- [Dynamic linear model tutorial](https://mjlaine.github.io/dlm/dlmtut.html#org04d2ab8) matlab
+[Dynamic linear model tutorial](https://mjlaine.github.io/dlm/dlmtut.html#org04d2ab8) matlab
 
-- [Forecasting, structural time series and the Kalman filter](https://www.cambridge.org/core/books/forecasting-structural-time-series-models-and-the-kalman-filter/CE5E112570A56960601760E786A5E631)  by Andrew C. Harvey
+[Forecasting, structural time series and the Kalman filter](https://www.cambridge.org/core/books/forecasting-structural-time-series-models-and-the-kalman-filter/CE5E112570A56960601760E786A5E631)  by Andrew C. Harvey
 
-- [Dynamic Linear Models with R]() by Giovanni Petris Sonia Petrone Patrizia Campagnoli
+[Dynamic Linear Models with R]() by Giovanni Petris Sonia Petrone Patrizia Campagnoli
 
-- [Time Series Analysis by State Space Methods](https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780198523543.001.0001/acprof-9780198523543) by J. Durbin and S.J. Koopman
+[Time Series Analysis by State Space Methods](https://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780198523543.001.0001/acprof-9780198523543) by J. Durbin and S.J. Koopman
+
+
+![Machine Learning: A Bayesian and Optimization Perspective](images/theodoridis2015ML.png){#fig-MLABAOP .column-margin width="40mm"}
+
+[@theodoridis2015ML] [Machine Learning: A Bayesian and Optimization Perspective](https://shop.elsevier.com/books/machine-learning/theodoridis/978-0-443-29238-5#full-description) Has two chapters on bayesian learning which are summarized in this [summer school slide deck](https://spars2017.lx.it.pt/index_files/SummerSchoolSlides/Theodoridis_SPARS2017_SS.pdf). I came across this book while looking into the Durban-Levinson recursion and the Yule-Walker equations. So far I haven't had time to read it but it looks like a good book on machine learning and the slide deck indicates it covers some of the essential material missing from this specialization like particle filtering.
 
