--- a/C1-L02.qmd
+++ b/C1-L02.qmd
@@ -38,15 +38,12 @@ $$ {#eq-conditional-independence}
 ### Conditional Probability Example - Female CS Student
 
 Suppose there are 30 students, 9 of whom are female. Of the 30 students, 12 are computer science majors. 4 of those 12 computer science majors are female.
-
 We want to estimate what is the probability of a student being female given that she is a computer science major
-
 We start by writing the above in the language of probability by converting frequencies to probabilities. We start with the marginal.
-
 First, the probability of a student being female from the data given above.
 
 $$
-\mathbb{P}r(Female) = \frac{9}{30} = \frac{3}{10}
+\mathbb{P}r(\text{Female}) = \frac{9}{30} = \frac{3}{10}
 $$
 
 Next, we estimate the probability of a student being a computer science major again just using the data given above.
@@ -65,14 +62,14 @@ Finally, we can use the definition of conditional probability and substitute the
 
 $$
 \mathbb{P}r(F \mid CS) = \frac{\mathbb{P}r(F \cap CS)}{\mathbb{P}r(CS)} = \frac{2/15}{2/5} = \frac{1}{3}
-$$
+$$ {#eq-conditional-probability-example}
 :::
 
 An intuitive way to think about a conditional probability is that we're looking at a sub-segment of the original population, and asking a probability question within that segment
 
 $$
-\mathbb{P}r(F \mid CS^c) = \frac{\mathbb{P}r(F\cap CS^c)}{PS(CS^c)} = \frac{5/30}{18/30} = \frac{5}{18}
-$$
+\mathbb{P}r(F \mid CS^c) = \frac{\mathbb{P}r(F\cap CS^c)}{ \mathbb{P}r (CS^c)} = \frac{5/30}{18/30} = \frac{5}{18}
+$$ {#eq-conditional-probability-intuition}
 
 The concept of **independence** is when one event does not depend on another.
 
@@ -144,7 +141,7 @@ $$
 &= \frac{(.977)(.0026)}{(.977)(.0026) + (1-.977)(1-.0026)}  \\ 
 &=  0.033 
 \end{aligned}
-$$
+$$ {#eq-bayes-hiv}
 
 This is a bit of a **surprise** - although the test has 90% + true and false accuracy - taking it once is only valid 3% of the time. How is this possible?
 
@@ -153,7 +150,7 @@ What happens in Bayes law is that we are updating probabilities. And since we st
 $$
 \begin{aligned}
 \mathbb{P}r(A \mid B) = \frac{\mathbb{P}r(B \mid A_1){(A_1)}}{\sum_{i=1}^{n}{\mathbb{P}r(B \mid A_i)}\mathbb{P}r(A_i)} \end{aligned}
-$$
+$$ {#eq-bayes-law-multiple-events}
 
 :::
 
