added mixtures to bibliography plus small fixes

--- a/A12.qmd
+++ b/A12.qmd
@@ -69,10 +69,10 @@ This text is recommended for further reading in the course 2
 
 ![Bayesian Data Analysis](images/book-BDA.jpg){#fig-BDA .column-margin width="40mm"}
 
-- [@gelman2013bayesian] [Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/) by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. 
-This book is considered the classic Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. 
+[@gelman2013bayesian] [Bayesian Data Analysis](https://sites.stat.columbia.edu/gelman/book/) by Andrew Gelman, John B. Carlin, Hal S. Stern, David B. Dunson, Aki Vehtari, Donald B. Rubin. 
+This book is considered the Graduate level text on Bayesian statistics and covers a wide range of topics in Bayesian data analysis. 
 The book is suitable for graduate students and researchers in statistics, computer science, and related fields. 
-This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book first and only then moving to this book. 
+This book is harder to read than the previous two books. I'd recommend reading and viewing McElreath's book and videos first and only then moving to this book later.
 This text is recommended for further reading in the course 2 but with a cautionary caveat that a solid background in calculus-based probability will be useful, as many details are left to the reader. I took an undergraduate course in probability and statistics that was based on measure theory but I'm not sure this was the kind of background these authors have in mind. 
 
 ![The BUGS book](images/book-BUGS.png){#fig-BUGS .column-margin width="40mm"}
@@ -90,7 +90,7 @@ Some addition books that were mentioned in the course bibliography:
 [@spiegelhalter2002MeasuresOfModelComplexity] "Measures of Model Complexity and Fit" by David Spiegelhalter, Andrew Thomas, Nicky Best, and W. Brian Gilks. 
 This paper considers the problem of model selection in Bayesian Hierarchical Models and proposes a new measure of model complexity and fit, the Deviance Information Criterion (DIC). 
 
-[@banerjee2026hierarchical] "[Hierarchical Modeling and Analysis for Spatial Data](https://www.routledge.com/Hierarchical-Modeling-and-Analysis-for-Spatial-Data/Banerjee-Carlin-Gelfand/p/book/9781439819173)" by Sudipto Banerjee, Bradley P. Carlin, and Alan E. Gelfand. 
+[@banerjee2026hierarchical] [Hierarchical Modeling and Analysis for Spatial Data](https://www.routledge.com/Hierarchical-Modeling-and-Analysis-for-Spatial-Data/Banerjee-Carlin-Gelfand/p/book/9781439819173) by Sudipto Banerjee, Bradley P. Carlin, and Alan E. Gelfand. 
 This book is a comprehensive introduction to hierarchical modeling and analysis for spatial data and covers a wide range of topics in spatial statistics, computation, and inference. The book is suitable for graduate students and researchers in statistics, computer science, and related fields. [data etc](https://www.counterpointstat.com/hierarchical-modeling-and-analysis-for-spatial-data.html/)
 
 
@@ -102,17 +102,29 @@ Unless the next edition has come out?
 
 ## Mixture Models 
 
-There were no books recommended in this course but this was in the bibliography from the previous course.
+![Finite Mixture and Markov Switching Models](images/book-FMMSM.jpg){#fig-FMMSM .column-margin width="40mm"}
 
-[@frühwirth2006finite] [Finite Mixture and Markov Switching Models](https://statmath.wu.ac.at/~fruehwirth/monographie/book_matlab_version_2.0.pdf) by Sylvia Frühwirth-Schnatter. 
+There were no books recommended in this course but [@frühwirth2006finite] was in the bibliography from the previous course. [Finite Mixture and Markov Switching Models](https://statmath.wu.ac.at/~fruehwirth/monographie/book_matlab_version_2.0.pdf) by Sylvia Frühwirth-Schnatter. 
 This book is a comprehensive introduction to finite mixture and Markov switching models and covers a wide range of topics in mixture modeling, computation, and inference. 
 The book is suitable for graduate students and researchers in statistics, computer science, and related fields.
 
 I found a number of other books on mixtures and time premitting I will add theme here
 
-<!-- TODO add more books on mixtures-->
 
-## Non parametric Bayesian Statistics
+[@fruhwirth2019handbook] [Handbook of Mixture Analysis]() by Christian P. Robert, Gilles Celeux, Sylvia Fruhwirth-Schnatter
+
+[@mclachlan2004finite] [Finite Mixture Models]() by Geoffrey J. McLachlan and David Peel. 
+A comprehensive account of major issues in finite mixture modeling.
+Advanced text on finite mixture models. 
+Lacks exercises and requires deep diving into papers.
+
+[@chen2023statistical] [Statistical Inference Under Mixture Models](https://link.springer.com/book/10.1007/978-981-99-6141-2) by Jiahua Chen. A more recent introduction to mixture models with recent developments in testing hypothesis for the order of the mixture and insights on inference for mixture models.
+
+[@yao2024mixture] [Mixture Models: Parametric, Semiparametric, and New Directions]() by Weixin Yao and Sijia Xiang. 
+
+[@visser2022mixture] [Mixture and Hidden Markov Models with R](https://link.springer.com/book/10.1007/978-3-031-01440-6) by Visser, I. and Speekenbrink, M.
+
+## Non-parametric Bayesian Statistics
 
 [@Hjort_Holmes_Müller_Walker_2010] "Bayesian Nonparametrics" by Peter M. Hjort, Chris Holmes, Maria E. Müller, and Stephen G. Walker. 
 This book is a comprehensive introduction to Bayesian nonparametric methods and covers a wide range of topics in nonparametric modeling, computation, and inference. 
@@ -257,7 +269,6 @@ a newer title from the authors is:
 
 [@wikle2019spatio] [Spatio-Temporal Statistics with R](https://spacetimewithr.org/)
 
-![Spatio-Temporal Statistics with R](images/book-STSWR.jpg){#fig-STSWR .column-margin width="40mm" style="vertical-align: top;"}
 
 ![Bayesian Analysis of Stochastic Process Models](images/rios2012bayesian.jpg){#fig-BAOSPM .column-margin width="40mm" style="vertical-align: top;"}
 
