--- a/references.bib
+++ b/references.bib
@@ -1439,8 +1439,6 @@ note = "Accessed 11/02/16",
   isbn={978-1098104030}
 }
 
-
-
 @book{wikle2019spatio,
   title={Spatio-Temporal Statistics with R},
   author={Wikle, C.K. and Zammit-Mangion, A. and Cressie, N.},
@@ -1450,4 +1448,56 @@ note = "Accessed 11/02/16",
   url={https://books.google.co.il/books?id=FD-IDwAAQBAJ},
   year={2019},
   publisher={CRC Press}
+}
+
+@book{mclachlan2004finite,
+  title={Finite Mixture Models},
+  author={McLachlan, G.J. and Peel, D.},
+  isbn={9780471654063},
+  series={Wiley Series in Probability and Statistics},
+  url={https://books.google.co.il/books?id=c2_fAox0DQoC},
+  year={2004},
+  publisher={Wiley}
+}
+
+@book{fruhwirth2019handbook,
+  title={Handbook of Mixture Analysis},
+  author={Fruhwirth-Schnatter, S. and Celeux, G. and Robert, C.P.},
+  isbn={9780429508868},
+  lccn={2020692932},
+  series={Chapman \& Hall/CRC Handbooks of Modern Statistical Methods},
+  url={https://books.google.co.il/books?id=N3yCDwAAQBAJ},
+  year={2019},
+  publisher={CRC Press}
+}
+
+@book{chen2023statistical,
+  title={Statistical Inference Under Mixture Models},
+  author={Chen, J.},
+  isbn={9789819961412},
+  series={ICSA Book Series in Statistics},
+  url={https://books.google.co.il/books?id=sBXlEAAAQBAJ},
+  year={2023},
+  publisher={Springer Nature Singapore}
+}
+
+
+@book{yao2024mixture,
+  title={Mixture Models: Parametric, Semiparametric, and New Directions},
+  author={Yao, W. and Xiang, S.},
+  isbn={9781040009871},
+  series={Chapman \& Hall/CRC Monographs on Statistics and Applied Probability},
+  url={https://books.google.co.il/books?id=scP9EAAAQBAJ},
+  year={2024},
+  publisher={CRC Press}
+}
+
+@book{visser2022mixture,
+  title={Mixture and Hidden Markov Models with R},
+  author={Visser, I. and Speekenbrink, M.},
+  isbn={9783031014406},
+  series={Use R!},
+  url={https://books.google.co.il/books?id=Eep3EAAAQBAJ},
+  year={2022},
+  publisher={Springer International Publishing}
 }
