--- a/tasks/todo.qmd
+++ b/tasks/todo.qmd
@@ -32,3 +32,7 @@
     - [ ] cloning the repo 
     - [ ] doing a render of the book
     
+
+## Bibliography
+
+- [x] add more books on mixtures in A12.qmd
